# PV_simulator

./: .gitignore  README.md  logbook.md
proto/: docker-compose.yml
proto/consumer/: Dockerfile  consumer.py
proto/messenger_service/: pyproject.toml
proto/messenger_service/messenger_service/: MessengerService.py
proto/messenger_service/tests/: test_messenger_service.py
proto/producer/: Dockerfile  producer.py  requirements.txt
proto/pv_emulator/: pyproject.toml
proto/pv_emulator/src/: messenger_service.py  meter.py
proto/pv_emulator/tests/: test_pv_emulator.py
pv_simulator/: Dockerfile  README  Visual_example.ipynb  docker-compose.yml  pyproject.toml
pv_simulator/pv_simulator/: messenger_service.py  power_house_simulator.py  pv_simulator.py
pv_simulator/tests/: test_pv_simulator.py
