[tool.poetry]
name = "pv_simulator"
version = "0.1.0"
description = ""
authors = ["mgonzalezperna"]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.1"
numpy = "^1.17"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
producer = "pv_simulator.power_house_simulator:main"
consumer = "pv_simulator.pv_simulator:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

